--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -26,11 +26,16 @@ body > * {
   tablets landscape: 1024x600px
 *****************/
 #taskContent {
-  position: static !important;
   flex: 2 0 0;
+  position: static !important;
+  display: flex;
+  justify-content: stretch;
 }
 
 /* speed slider  */
+.speedControls {
+  flex: 1 1 0;
+}
 #speedSlider {
   background: #4a90e2;
 }
@@ -73,9 +78,7 @@ body > * {
   MODE PLAYER
 *****************/
 .mode-player #taskContent {
-  display: flex;
   flex-direction: column;
-  justify-content: stretch;
 }
 .mode-player #taskIntro {
   display: none;
@@ -167,46 +170,31 @@ body > * {
     display: none;
   }
 }
-/* mode instructions */
+
+/*****************
+  MODE INSTRUCTIONS
+*****************/
 .mode-instructions #blocklyLibContent,
 .mode-instructions .speedControls {
   display: none;
 }
 .mode-instructions #taskContent {
-
 }
 .mode-instructions #introGrid {
-
+  display: flex;
+  flex-direction: column;
 }
 .mode-instructions #taskIntro {
-  left: 410px;
-  height: 100%;
-  overflow: auto;
+  order: 2;
 }
 @media screen and (orientation: landscape) { /* horizontal screen layout */
-
-  .mode-instructions #gridContainer {
-    width: 410px;
+  .mode-instructions #introGrid {
+    flex-direction: row;
   }
+
 }
 @media screen and (orientation: portrait) { /* vertical screen layout */
 
-  .mode-instructions #gridContainer {
-    top: 0;
-    height: 360px;
-  }
-  .mode-instructions #grid {
-    margin: 0 auto;
-  }
-  .mode-instructions #taskIntro {
-    top: 380px;
-    left: 0;
-    bottom: 0;
-    height: auto;
-  }
-  .mode-instructions #gridContainer {
-    margin: 0 auto;
-  }
 }
 
 /*****************
@@ -748,7 +736,7 @@ input[type=button] {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: flex-end;
   flex: 0 0 auto;
 }
