--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -8,7 +8,110 @@ body > * {
 * {
   box-sizing: border-box;
 }
-
+body {
+  font-size: 12px;
+  position: relative;
+  overflow-x: hidden;
+}
+#openEditorMenu {
+  position: absolute;
+  right: 0;
+  background-color: #4a4a4a;
+  padding: 8px 13px;
+  border-radius: 5px 0 0 5px;
+  color: #fff;
+  cursor: pointer;
+}
+#openEditorMenu::before,
+#openEditorMenu::after {
+  content: " ";
+  position: absolute;
+  right: 0;
+  width: 10px;
+  height: 10px;
+  background: transparent;
+}
+#openEditorMenu::before {
+  top: -10px;
+  border-radius: 50% 0;
+  box-shadow: 0px 5px 0 #4a4a4a;
+}
+#openEditorMenu::after {
+  bottom: -10px;
+  border-radius: 0 50%;
+  box-shadow: 0px -5px 0 #4a4a4a;
+}
+#editorMenu {
+  height: 100%;
+  position: absolute;
+  right: -50%;
+  width: 50%;
+  top: 0;
+  box-shadow: 2px 0 0 #000 inset;
+  background-color: #4a4a4a;
+  color: #FFF;
+  z-index: 99;
+}
+#editorMenu .editorMenuHeader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 12px 20px;
+  z-index: 1;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+#editorMenu #closeEditorMenu {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+}
+#editorMenu #closeEditorMenu:hover {
+  color:#4a90e2;
+}
+#editorMenu .editorActions {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#editorMenu .editorActions div {
+  flex: 1 1 0;
+  padding: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-top: 1px solid #5c5c5c;
+  cursor: pointer;
+  text-align: center;
+}
+#editorMenu .editorActions div:hover {
+  color:#4a90e2;
+}
+#editorMenu .editorActions div:first-child {
+  border-top: none;
+}
+#editorMenu .editorActions div span.fas {
+  font-size: 48px;
+}
+#editorMenu #saveUrl {
+  display: none;
+}
+#editorMenu input[type=file] {
+  cursor: pointer;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -moz-opacity: 0;
+  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
 /*****************
   LAYOUT
 *****************/
@@ -188,46 +291,7 @@ body > * {
   color: black;
 }
 
-#editorMenuContainer {
-  float: right;
-}
-#editorMenu {
-  position: absolute;
-  right: 80px;
-  bottom: 30px;
-  z-index: 99;
-  display: none;
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
-  background-color: #4A90E2;
-}
-#editorMenu div {
-  cursor: pointer;
-  color: #FFF;
-  padding: 10px 20px;
-  border-bottom: 1px solid #717171;
-  position: relative;
-}
-#editorMenu #saveUrl {
-  display: none;
-}
-#editorMenu div:last-child {
-  border: 0;
-}
-#editorMenu div:hover {
-  background: #F5F5F5;
-  color: #282828;
-}
-#editorMenu input[type=file] {
-  cursor: pointer;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  -moz-opacity: 0;
-  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-}
+
 #fullscreenButton {
   float: right;
 }
@@ -415,7 +479,7 @@ body > * {
   cursor: not-allowed;
 }
 
-#displayHelpBtn, #toggleEditorMenu {
+#displayHelpBtn {
   border: 0;
   background-color: transparent;
   color: #fff;
